--- a/website/src/css/gradle.css
+++ b/website/src/css/gradle.css
@@ -1,18 +1,3 @@
-/*
- * Copyright 2010 the original author or authors.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
 h1 {
     font-size: 200%;
     margin-top: 1em;
@@ -297,26 +282,13 @@ p {
     left: 330px;
 }
 
-#who_uses td {
-    padding: 0;
-    margin: 0;
-    padding-right: 3em;
-}
-
-#who_uses table {
-    padding: 0;
-    margin: 0;
-    margin-left: 0.3em;
-    border-collapse: collapse;
-}
-
-#who_uses tr {
-    padding: 0;
-    margin: 0;
+#who_uses div {
+    float: left;
+    padding-right: 55px;
 }
 
 #who_uses ul {
-    padding-left: 0.4em;
+    padding-left: 0.45em;
 }
 
 #who_uses li {
@@ -331,6 +303,10 @@ p {
     padding-left: 25px;
 }
 
+.homeList h2 {
+    margin-bottom: 0.6em;
+}
+
 .homeList ul {
     margin: 0;
     padding: 0;
@@ -339,7 +315,6 @@ p {
 
 .homeList li {
     margin-left: 0;
-    margin-top: 0.8em;
     margin-bottom: 0.8em;
     list-style: none;
 }
@@ -367,6 +342,10 @@ table.tools td {
 table.tools a {
     display: block;
     margin-top: 0.6em;
+}
+
+table.table td.colHeader {
+    white-space: nowrap;
 }
 
 .figure-contents {
