--- a/subprojects/plugins/src/main/resources/org/gradle/api/internal/tasks/testing/junit/report/style.css
+++ b/subprojects/plugins/src/main/resources/org/gradle/api/internal/tasks/testing/junit/report/style.css
@@ -8,14 +8,15 @@ body {
 }
 
 #content {
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 #content h1 {
     font-size: 160%;
+    margin-bottom: 10px;
 }
 
 #summary {
@@ -29,6 +30,16 @@ body {
 
 #summary td {
     vertical-align: top;
+}
+
+#footer {
+    margin-top: 100px;
+    font-size: 80%;
+    color: #a0a0a0;
+}
+
+.breadcrumbs {
+    color: #606060;
 }
 
 .infoBox {
@@ -80,17 +91,6 @@ div.failures {
     border-color: #b60808;
 }
 
-pre.stackTrace {
-    font-size: 10pt;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-    background-color: #f7f7f7;
-    border: solid 1px #d0d0d0;
-    overflow-x: auto;
-}
-
 h2 {
     font-size: 120%;
 }
@@ -109,37 +109,55 @@ ul.linkList {
 
 ul.linkList li {
     list-style: none;
+    margin-bottom: 5px;
 }
 
 ul.tabLinks {
     position: relative;
     height: 30px;
     padding-left: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 ul.tabLinks li {
     float: left;
     height: 30px;
     list-style: none;
-    padding-right: 50px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 8px;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    -moz-border-radius: 7px;
+    border-radius: 7px;
+    margin-right: 25px;
+    border: solid 1px #f0f0f0;
+    background-color: #fafafa;
+    behavior: url(css3-pie-1.0beta3.htc);
 }
 
-li.selected {
+ul.tabLinks li.selected {
+    background-color: #d0f0f5;
+    border-color: #d0f0f5;
 }
 
 ul.tabLinks a {
     font-size: 120%;
     display: block;
     outline: none;
-}
-
-ul.tabLinks li.selected a {
-    font-weight: bold;
     text-decoration: none;
+    margin: 0;
+    padding: 0;
 }
 
-ul.tabLinks li.deselected a {
-    color: blue;
+ul.tabLinks li.deselected a:hover {
+    text-decoration: underline;
+}
+
+ul.tabLinks li h2 {
+    margin: 0;
+    padding: 0;
 }
 
 div.tab {
@@ -154,7 +172,7 @@ div.deselected {
 }
 
 div.tab table {
-    min-width: 80%;
+    width: 100%;
     border-collapse: collapse;
 }
 
@@ -170,4 +188,15 @@ div.tab th {
 div.tab td {
     padding-top: 5px;
     padding-bottom: 5px;
+}
+
+div.tab pre {
+    font-size: 11pt;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: #f7f7f7;
+    border: solid 1px #d0d0d0;
+    overflow-x: auto;
 }
