--- a/subprojects/plugins/src/main/resources/org/gradle/api/internal/tasks/testing/junit/report/style.css
+++ b/subprojects/plugins/src/main/resources/org/gradle/api/internal/tasks/testing/junit/report/style.css
@@ -48,7 +48,7 @@ ul {
     color: #a0a0a0;
 }
 
-.breadcrumbs {
+.breadcrumbs, .breadcrumbs a {
     color: #606060;
 }
 
@@ -109,14 +109,6 @@ div.failures, #successRate.failures {
 
 h2 {
     font-size: 120%;
-}
-
-a {
-   color: inherit;
-}
-
-a.visited {
-    color: inherit;
 }
 
 ul.linkList {
