Updated advanced code sample

--- a/subprojects/docs/src/samples/play/advanced/app/views/fields.scala.html
+++ b/subprojects/docs/src/samples/play/advanced/app/views/fields.scala.html
@@ -1,8 +1,8 @@
 @(elements: helper.FieldElements)
 
 <div class="@if(elements.hasErrors) {error}">
-    <label for="@elements.id">@elements.label(elements.lang)</label>
-    <span class="text-error">@elements.errors(elements.lang).mkString(", ")</span>
+    <label for="@elements.id">@elements.label</label>
+    <span class="text-error">@elements.errors.mkString(", ")</span>
     <div class="input">
         @elements.input
     </div>
