--- a/subprojects/docs/src/samples/play/advanced/app/views/person.scala.html
+++ b/subprojects/docs/src/samples/play/advanced/app/views/person.scala.html
@@ -1,4 +1,4 @@
-@(personForm: Form[Person])
+@(personForm: Form[Person])(implicit messages: play.api.i18n.Messages)
 
 @implicitField = @{ helper.FieldConstructor(fields.f) }
 
