Improve layout and vertical rhythm for docs
This change improves readability of documentation pages in the
following ways:
 - Reduce width of content area, making tracking a single line
   easier
 - Unifies vertical rhythm and header styles with other Gradle
   properties
 - Lots of stylistic tweaks that make the pages pleasant
 - Uses system monospace font instead of Ubuntu Mono,
   improving page speed and consistency with other Gradle sites

Issue: gradle/dotorg-docs#61

--- a/subprojects/docs/src/docs/css/docs.css
+++ b/subprojects/docs/src/docs/css/docs.css
@@ -66,8 +66,12 @@
     font-size: 100%;
 }
 
+.note p:first-child {
+    margin-top: 0;
+}
+
 .note > :last-child, .tip > :last-child, .examplelocation > :last-child {
-    margin-bottom: 0px
+    margin-bottom: 0;
 }
 
 .note, .tip {
