--- a/subprojects/docs/src/docs/css/release-notes.css
+++ b/subprojects/docs/src/docs/css/release-notes.css
@@ -1,3 +1,12 @@
+ul li {
+    list-style-type: none;
+}
+ul li:before {
+    content: '\00276F';
+    padding-right: 5px;
+    margin-left: -20px;
+}
+
 img.logo {
   margin-bottom: 1em;
 }
