--- a/subprojects/docs/src/docs/css/base.css
+++ b/subprojects/docs/src/docs/css/base.css
@@ -97,8 +97,9 @@ h4, h5, h6 {
 }
 
 p {
-    margin-top: 0.9375rem;
-    margin-bottom: 1.5rem;
+    font-size: 1.0625rem;
+    margin-bottom: 1.25rem;
+    text-rendering: optimizeLegibility;
 }
 
 strong {
@@ -106,8 +107,8 @@ strong {
 }
 
 ul, ol, dl {
+    line-height: 1.6;
     margin-top: 0;
-    margin-bottom: 1rem;
 }
 
 dt {
@@ -127,12 +128,10 @@ hr {
     margin: 0;
 }
 
-li ul, li ol {
-    margin: 0;
-}
-
-ul, ol {
-    padding-left: 1.5em;
+ul, ol, dl {
+    list-style-position: outside;
+    margin: 0 0 1.25rem 1.5em;
+    padding: 0;
 }
 
 ul {
@@ -141,10 +140,6 @@ ul {
 
 ol {
     list-style-type: decimal;
-}
-
-dl {
-    margin: 0 0 1.5em 0;
 }
 
 dl dt {
@@ -253,49 +248,45 @@ blockquote p:last-child {
 
 /* code */
 code, pre {
-    font-family: monospace;
+    background-color: #f7f7f8;
+    border-radius: 4px;
+    font-family: "Droid Sans Mono", "DejaVu Sans Mono", monospace;
+    font-size: 1em;
+    font-style: normal;
 }
 
-code {
-    padding: .25em .5em;
-    font-size: 85%;
-    color: #02303A;
-    border-radius: 3px;
+*:not(pre) > code {
+    font-size: 0.9375em;
+    letter-spacing: 0;
+    padding: 0.1em 0.5ex;
+    text-rendering: optimizeSpeed;
+    word-spacing: -0.15em;
+    word-wrap: break-word;
 }
 
 pre {
-    line-height: 1.3;
+    line-height: 1.45;
     margin-top: 0;
-    margin-bottom: 1rem;
-    padding: 0.8em;
+    margin-bottom: 1.5em;
+    padding: 1rem;
 }
 
 pre code {
-    padding: 0;
-    font-size: 100%;
-    color: inherit;
     background-color: transparent;
+    color: inherit;
+    line-height: 1.45;
+    font-size: 100%;
+    padding: 0;
 }
 
 pre.code, pre.programlisting, pre.screen, pre.tt {
-    font-size: .8rem;
-    padding: 1rem;
-    line-height: 1.4;
-    border-radius: 5px;
+    background-color: #f7f7f8;
+    border-radius: 4px;
+    font-size: 1em;
+    line-height: 1.45;
+    margin-bottom: 1.25em;
     overflow-x: auto;
-}
-
-pre.code, pre.programlisting {
-    margin-bottom: 1rem;
-    background-color: #f9f9f9;
-}
-
-pre.screen, pre.tt {
-    background-color: black;
-    box-shadow: 0 10px 50px 2px rgba(0, 0, 0, 0.56);
-    color: white;
-    font-weight: bold;
-    margin: 1em 1em 2em;
+    padding: 1rem;
 }
 
 tbody tr:nth-child(even) td, tbody tr.even td {
@@ -303,8 +294,7 @@ tbody tr:nth-child(even) td, tbody tr.even td {
 }
 
 li em, p em {
-    padding: 0 1px 0 1px;
-    text-decoration: underline;
+    padding: 0 1px;
 }
 
 code em, tt em {
