--- a/subprojects/docs/src/docs/css/release-notes.css
+++ b/subprojects/docs/src/docs/css/release-notes.css
@@ -2,17 +2,21 @@
   color: #02303A;
 }
 
-ul li {
+#fixed-issues-list ul,
+.table-of-contents ul,
+.topic ul {
   list-style-type: none;
 }
 
 #fixed-issues-list li:before,
 .table-of-contents ul li:before,
 .topic ul li:before {
+  color: #02303A;
   content: '\00276F';
-  padding-right: 5px;
-  margin-left: -20px;
-  font-family: sans-serif;
+  float: left;
+  font: 14px bold sans-serif;
+  margin-left: -1em;
+  margin-top: .2em;
 }
 
 img.logo {
