Lighter button color for docs
Signed-off-by: Eric Wendelin <eric@gradle.com>

--- a/subprojects/docs/src/docs/css/docs.css
+++ b/subprojects/docs/src/docs/css/docs.css
@@ -314,7 +314,7 @@
     font-size: inherit;
     line-height: inherit;
     width: 100px;
-    background-color: #1DA2BD;
+    background-color: #1BA8CB;
     color: white;
     font-weight: 500;
     border-top-right-radius: 4px;
