License user manual and DSL reference under CC NC-SA 4.0
This is similar to other open source projects, and was chosen
so that users can contribute but not sell Gradle docs available
on the web.

Signed-off-by: Eric Wendelin <eric@gradle.com>

--- a/subprojects/docs/src/docs/css/base.css
+++ b/subprojects/docs/src/docs/css/base.css
@@ -412,6 +412,10 @@ p .right {
     padding-bottom: 0;
 }
 
+.citetitle {
+    font-style: normal;
+}
+
 table th.border-right {
     border-right: solid #d0d0d0 1px;
 }
@@ -1138,15 +1142,6 @@ h3.releaseinfo {
     width: 224px;
     height: 135px;
     margin: 12px;
-}
-
-.legalnotice {
-    color: #666;
-}
-
-.legalnotice p:first-of-type:before {
-    content: "Copyright Notice: ";
-    font-weight: 500;
 }
 
 .segmentedlist {
