--- a/subprojects/docs/src/docs/css/base.css
+++ b/subprojects/docs/src/docs/css/base.css
@@ -81,7 +81,7 @@ th {
 /* typography */
 h1, h2, h3, h4, h5, h6 {
     margin-top: 0;
-    margin-bottom: .5rem;
+    margin-bottom: 1rem;
     font-weight: 500;
     line-height: 1.2;
     color: #02303A;
@@ -133,6 +133,10 @@ dt {
 dd {
     margin-bottom: .5rem;
     margin-left: 1.5em;
+}
+
+dd p {
+    margin-top: 0;
 }
 
 hr {
