Polish docs design a little

--- a/subprojects/docs/src/docs/css/base.css
+++ b/subprojects/docs/src/docs/css/base.css
@@ -6,9 +6,8 @@
     font-family: Lato;
     font-weight: 500;
     font-style: normal;
-    text-rendering: optimizeLegibility;
     src: url("https://assets.gradle.com/lato/fonts/lato-semibold/lato-semibold.woff2") format("woff2"),
-    url("https://assets.gradle.com/lato/fonts/lato-semibold/lato-semibold.woff") format("woff");
+         url("https://assets.gradle.com/lato/fonts/lato-semibold/lato-semibold.woff") format("woff");
 }
 
 * {
@@ -83,7 +82,6 @@ h1, h2, h3, h4, h5, h6 {
     margin-top: 0;
     margin-bottom: 1rem;
     font-weight: 500;
-    line-height: 1.2;
     color: #02303A;
     text-rendering: optimizeLegibility;
 }
@@ -93,12 +91,12 @@ h1 {
 }
 
 h2 {
-    margin-top: 1.5rem;
+    margin-top: 2.5rem;
     font-size: 1.5rem;
 }
 
 h3 {
-    margin-top: 1rem;
+    margin-top: 1.5rem;
     font-size: 1.125rem;
 }
 
@@ -111,27 +109,14 @@ p {
     font-size: 1rem;
     line-height: 1.6;
     margin-bottom: 1.25rem;
-    text-rendering: optimizeLegibility;
-}
-
-@media (min-width: 1200px) {
-    p {
-        font-size: 1.0625rem;
-    }
-}
-
-@media (min-width: 1400px) {
-    p {
-        font-size: 1.125rem;
-    }
 }
 
 dt {
-    font-weight: bold;
+    font-weight: 700;
 }
 
 dd {
-    margin-bottom: .5rem;
+    margin-bottom: 0.5rem;
     margin-left: 1.5em;
 }
 
@@ -187,7 +172,7 @@ abbr[title], acronym[title] {
 }
 
 b, strong, dfn {
-    font-weight: 500;
+    font-weight: 700;
 }
 
 em, dfn {
@@ -548,10 +533,6 @@ h3.releaseinfo {
     color: #1DA2BD;
 }
 
-.site-header__navigation-item .site-header__navigation-link.active {
-    font-weight: 500;
-}
-
 /* Navigation submenu styles */
 .site-header__navigation-submenu-section {
     position: relative;
@@ -711,7 +692,6 @@ h3.releaseinfo {
     display: block;
     font-size: 1rem;
     line-height: 1.0;
-    opacity: 0.7;
 }
 
 .docs-navigation a code {
@@ -723,7 +703,6 @@ h3.releaseinfo {
 
 .docs-navigation a.active {
     color: #1BA8C4;
-    opacity: 1.0;
 }
 
 .docs-navigation ul {
@@ -762,12 +741,9 @@ h3.releaseinfo {
 
 .docs-navigation h3 {
     font-size: 1rem;
+    font-weight: 700;
     line-height: 1.5;
-    margin: 0;
-}
-
-.docs-navigation h3 {
-    margin-top: 1.5em;
+    margin: 1.5em 0 0;
 }
 
 @media screen and (min-width: 45rem) {
@@ -839,7 +815,7 @@ h3.releaseinfo {
     .chapter .toc:before {
         content: "Contents";
         display: block;
-        font-weight: 500;
+        font-weight: 700;
         margin: 0.4rem 0 0.625rem 0;
     }
 
@@ -853,14 +829,12 @@ h3.releaseinfo {
     .book .home .toc a,
     .chapter .toc a {
         color: #02303A;
-        opacity: 0.7;
     }
 
     .appendix .toc a.active,
     .book .home .toc a.active,
     .chapter .toc a.active {
         color: #1BA8C4;
-        opacity: 1.0;
     }
 
     /*
